Better makefile organization
rename prometheus_operator -> prometheus-operator

--- a/src/cAdvisor/Makefile
+++ b/src/cAdvisor/Makefile
@@ -1,10 +1,12 @@
+KUBECTL = kubectl
+NAMESPACE = airflow
+KUBECTL_OPT = -
+SRC_FILES =	.
+
 all: cadvisor
 
-ns:
-	kubectl apply -f ./ns.yaml
-
-cadvisor: ns
-	kustomize build . | kubectl apply -f -
+cadvisor:
+	kustomize build $(SRC_FILES) | $(KUBECTL) apply -f $(KUBECTL_OPT)
 
 fclean:
 	kubectl delete --all -n cadvisor all
