--- a/src/celery/statefulset.yaml
+++ b/src/celery/statefulset.yaml
@@ -19,46 +19,53 @@ spec:
         run: celery
     spec:
       containers:
-      - image: tomwilkie/git-sync
-        name: git-sync
-        envFrom:
-        - secretRef:
-            name: git-sync-secrets
-        volumeMounts:
-          - name: airflow-dags
-            mountPath: /git
-        resources:
-          requests:
-            memory: 200Mi
-            cpu: 150m
-          limits:
-            memory: 500Mi
-            cpu: 300m
-      - image: apache/airflow:master
-        name: celery
-        resources:
-          requests:
-            cpu: 0.5
-            memory: "512Mi"
-          limits:
-            cpu: 1.5
-            memory: "2048Mi"
-        envFrom:
-        - configMapRef:
-            name: airflow-env
-        command: ['sh', '-c', 'airflow worker']
-        ports:
-          - name: celery-http
-            containerPort: 8793
-            protocol: TCP
-        volumeMounts:
-          - name: airflow-dags
-            mountPath: /home/airflow/airflow/dags
-            readOnly: false
+        - image: tomwilkie/git-sync
+          name: git-sync
+          envFrom:
+            - secretRef:
+                name: git-sync-secrets
+          volumeMounts:
+            - name: airflow-dags
+              mountPath: /git
+          resources:
+            requests:
+              memory: 200Mi
+              cpu: 150m
+            limits:
+              memory: 500Mi
+              cpu: 300m
+        - image: apache/airflow:master
+          name: celery
+          resources:
+            requests:
+              cpu: 0.5
+              memory: "512Mi"
+            limits:
+              cpu: 1.5
+              memory: "2048Mi"
+          envFrom:
+            - configMapRef:
+                name: airflow-celery-env
+            - secretRef:
+                name: airflow-celery-env
+          command: ["sh", "-c", "airflow worker"]
+          ports:
+            - name: celery-http
+              containerPort: 8793
+              protocol: TCP
+          volumeMounts:
+            - name: airflow-dags
+              mountPath: /home/airflow/airflow/dags
+              readOnly: false
       initContainers:
         - image: mysql:5.7
           name: backend-liveness-check
-          command: ['sh', '-c', 'until mysqladmin ping -h $RESULT_BACKEND_ADDRESS -u root --password=toor; do echo Waiting for result backend to start; sleep 1; done;']
+          command:
+            [
+              "sh",
+              "-c",
+              "until mysqladmin ping -h $RESULT_BACKEND_ADDRESS -u root --password=toor; do echo Waiting for result backend to start; sleep 1; done;",
+            ]
           env:
             - name: RESULT_BACKEND_ADDRESS
               value: "result-backend"
