--- a/src/celery/statefulset.yaml
+++ b/src/celery/statefulset.yaml
@@ -21,6 +21,8 @@ spec:
       containers:
         - image: tomwilkie/git-sync
           name: git-sync
+          args:
+            - -wait=60
           envFrom:
             - secretRef:
                 name: git-sync-secrets
@@ -38,10 +40,10 @@ spec:
           name: celery
           resources:
             requests:
-              cpu: 0.5
-              memory: "512Mi"
+              cpu: 0.25
+              memory: "800Mi"
             limits:
-              cpu: 1.5
+              cpu: 1
               memory: "2048Mi"
           envFrom:
             - configMapRef:
