--- a/src/prometheus-adapter/custom-metrics-apiserver-deployment.yaml
+++ b/src/prometheus-adapter/custom-metrics-apiserver-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   name: custom-metrics-apiserver
   namespace: custom-metrics
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: custom-metrics-apiserver
@@ -18,38 +18,42 @@ spec:
     spec:
       serviceAccountName: custom-metrics-apiserver
       containers:
-      - name: custom-metrics-apiserver
-        image: directxman12/k8s-prometheus-adapter-amd64
-        args:
-        - --secure-port=6443
-        - --tls-cert-file=/var/run/serving-cert/serving.crt
-        - --tls-private-key-file=/var/run/serving-cert/serving.key
-        - --logtostderr=true
-        - --prometheus-url=http://prometheus.airflow.svc:9090/
-        - --metrics-relist-interval=20s
-        # - --kubelet-insecure-tls
-        # - --rate-interval=60s
-        - --v=6
-        - --config=/etc/adapter/config.yaml
-        ports:
-        - containerPort: 6443
-        securityContext:
-          runAsUser: 0
-        volumeMounts:
-        - mountPath: /var/run/serving-cert
-          name: volume-serving-cert
-          readOnly: true
-        - mountPath: /etc/adapter/
-          name: config
-          readOnly: true
-        - mountPath: /tmp
-          name: tmp-vol
+        - name: custom-metrics-apiserver
+          image: directxman12/k8s-prometheus-adapter-amd64
+          args:
+            - --secure-port=6443
+            - --tls-cert-file=/var/run/serving-cert/serving.crt
+            - --tls-private-key-file=/var/run/serving-cert/serving.key
+            - --logtostderr=true
+            - --prometheus-url=http://prometheus.airflow.svc:9090/
+            - --metrics-relist-interval=20s
+            # - --kubelet-insecure-tls
+            # - --rate-interval=60s
+            - --v=6
+            - --config=/etc/adapter/config.yaml
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+          ports:
+            - containerPort: 6443
+          securityContext:
+            runAsUser: 0
+          volumeMounts:
+            - mountPath: /var/run/serving-cert
+              name: volume-serving-cert
+              readOnly: true
+            - mountPath: /etc/adapter/
+              name: config
+              readOnly: true
+            - mountPath: /tmp
+              name: tmp-vol
       volumes:
-      - name: volume-serving-cert
-        secret:
-          secretName: cm-adapter-serving-certs
-      - name: config
-        configMap:
-          name: adapter-config
-      - name: tmp-vol
-        emptyDir: {}
+        - name: volume-serving-cert
+          secret:
+            secretName: cm-adapter-serving-certs
+        - name: config
+          configMap:
+            name: adapter-config
+        - name: tmp-vol
+          emptyDir: {}
